# bayesian-a-b-testing

./: .gitignore  .pre-commit-config.yaml  Bayesian_A_B_testing.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
archive/v1_baseline/: Bayesian_A_B_testing.ipynb  README.md
archive/v2/: app_v2.py  v2_0_demo.ipynb
argonx/: __init__.py  experiment.py
argonx/decision_rules/: __init__.py  composite.py  engine.py  guardrails.py  joint.py  metrics.py
argonx/models/: __init__.py  base_model.py  binary_model.py  count_model.py  gaussian_model.py  lognormal_model.py
argonx/results/: __init__.py  plots.py  result.py
argonx/sequential/: __init__.py  stopping.py
examples/: 01_ecommerce_checkout.ipynb  02_saas_pricing.ipynb  03_drug_dosage.ipynb  04_gaming_matchmaking.ipynb  05_personalisation_segments.ipynb
experimentation/: experiment.py
experimentation/decision_rules/: composite.py  engine.py  guardrails.py  joint.py  metrics.py
experimentation/models/: __init__.py  base_model.py  binary_model.py  count_model.py  gaussian_model.py  lognormal_model.py
experimentation/results/: result.py
src/: engine.py  sequential_decision.py
src/data/: data_loader.py
src/decision/: decision_engine.py
src/metrics/: base.py
src/models/: bernoulli.py  lognormal.py
tests/: test_math.py
tests/integration/: test_experiment.py  test_models.py
tests/unit/: test_composite.py  test_engine.py  test_experiment.py  test_guardrails.py  test_joints.py  test_metrics.py  test_models.py  test_plots.py  (+2 more)
