[project]
name = "argonx"
version = "1.0.0"
description = "Bayesian decision engine for A/B testing"
authors = [{ name = "Souradeep Roy" }]

readme = "README.md"
license = { text = "MIT" }

requires-python = ">=3.10"

dependencies = [
    "numpy>=1.24",
    "pandas>=1.5",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "pymc>=5.0",
    "arviz>=0.15"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
    "notebook",
    "ipywidgets"
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
